--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 				<div class="navbar_nav">
 					<ul class="nav_list">
 						<button onclick="scrollToTarget()">Что я могу</button>
-						<button onclick="scrollToTarget2()">Партфолио</button>
+						<button onclick="scrollToTarget2()">Портфолио</button>
 						<button onclick="scrollToTarget3()">Связаться</button>
 					</ul>
 				</div>
@@ -71,7 +71,7 @@
 	<section class="works">
 	 <div class="container">
 		 <div class="section_heading">
-			 <h2 class="section_title">Партфолио</h2>
+			 <h2 class="section_title">Портфолио</h2>
 			 <p class="section_subtitle">Сайты которые я сделал во время обучения</p>
 		 </div>
 		 <div class="image-container" id="gallery">
